add jvm opts to honor docker memory limits