@@ -85,6 +85,7 @@ if [ ! -z "${JENKINS_HOME}" ] ; then
   if [ ! -z "${GF_INTERNAL_ENV}" ] ; then
     echo "${GF_INTERNAL_ENV}" | base64 -d > ${GF_INTERNAL_ENV_SH}
     . ${GF_INTERNAL_ENV_SH}
+    export ANT_OPTS="${ANT_OPTS} -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
     export MAVEN_OPTS="${ANT_OPTS} -Dmaven.repo.local=${HOME}/.m2/repository"
   fi
 fi
